[Trash] Handle ENOENT error when renaming files

When the user deletes a file, empties the trash, then tries to undo the
deletion, the error message should state that the file does not exist.

Add unit test.

BUG: 419069
FIXED-IN: 5.72